I modified the first page to include a link to the second page, and then I added a link to a writing website and a link to return to the index page on my second page.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <h1>Hello, World!</h1>
     <p>The most swag webpage in existence</p>
     <h3>About me</h3>
-    <p> My name is Katie! <br> In my free time, I like to play instruments, read, write, listen to music and play video games. <br> My favorite subjects are English and Science. </p>
+    <p> My name is Katie! <br> In my free time, I like to play instruments, read, write, listen to music and play video games. <br> My favorite subjects are English and Science. <br> <br> If you want to read more from me, <a href="https://unit1-01-html-helloworld.kaitlingreen.repl.co/index2.html"> here</a> is another page! </p>
   </body>
 </html> 
